--- a/index.html
+++ b/index.html
@@ -15,32 +15,32 @@
     <!-- navbar-start -->
     <nav class="navbar navbar-expand-md bg-body-tertiary shadow-sm sticky-top">
         <div class="container-fluid">
-          <a class="navbar-brand text-danger" href="#">My Portfolio</a>
+          <a class="navbar-brand text-danger fs-3" href="#">My Portfolio</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active text-danger" aria-current="page" href="#home">Home</a>
+                <a class="nav-link active " aria-current="page" href="#home">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-danger" href="#about">About Me</a>
+                <a class="nav-link" href="#about">About Me</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-danger" href="#project">Projects</a>
+                <a class="nav-link" href="#project">Projects</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-danger" href="#portfolio">Portfolio</a>
+                <a class="nav-link" href="#portfolio">Portfolio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-danger" href="#freelancer">Freelancer Projects</a>
+                <a class="nav-link" href="#freelancer">Freelancer Projects</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-danger" href="#member">Members</a>
+                <a class="nav-link" href="#member">Members</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-danger" href="#contact">Contact</a>
+                <a class="nav-link" href="#contact">Contact</a>
               </li>
             </ul>
           </div>
@@ -62,7 +62,7 @@
                         <p class="text-muted mb-1">Hello I'm</p>
                         <h1 class="text-danger fs-1 fw-bold">Web Developer</h1>
                         <h2 class="fs-4">Maw Koon Hein</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, consectetur, nisi molestiae, aut temporibus error est consequatur quidem rem explicabo alias. Explicabo, laboriosam quasi quam aperiam minima dolorem delectus sit.</p>
+                        <p>Maw Koon Hein is a 23-year-old computer science student with a strong interest in programming, particularly in C# and ASP.NET. Curious and tech-oriented, he enjoys experimenting with software, working in VirtualBox terminals, and exploring mobile and system technologies. Beyond academics, he plays Mobile Legends and values his close-knit family, which includes his mom, aunt, and grandfather. Thoughtful and detail-focused, Maw Koon Hein approaches learning and problem-solving with persistence, curiosity, and a calm, analytical mindset.</p>
                         <a href="#" class="btn btn-danger mt-3 px-3">My Works</a>
                     </div>
                 </div>
@@ -114,7 +114,7 @@
                 <div class="social-link">
                   <a href="https://www.facebook.com/mawkoonhein8112002"target=_blank class="me-2"><i class="fa-brands fa-facebook-f text-dark fa-lg"></i></a>
                   <a href="" class="me-2"><i class="fa-brands fa-instagram text-dark fa-lg"></i></a>
-                  <a href="" class="me-2"><i class="fa-brands fa-twitter text-dark fa-lg"></i></a>
+                  <a href="https://t.me/mawkoon_23" class="me-2"><i class="fa-brands fa-telegram text-dark fa-lg"></i></a>
                   <a href="" class=""><i class="fa-brands fa-viber text-dark fa-lg"></i></a>
                 </div>
               </div>
@@ -141,14 +141,14 @@
           <div class="skill mb-4">
             <h3 class="fs-6">javascript</h3>
             <div class="progress" role="progressbar" aria-label="Example 1px high" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="height: 6px">
-              <div class="progress-bar bg-danger" style="width: 60%"></div>
+              <div class="progress-bar bg-danger" style="width: 50%"></div>
             </div>
           </div>
 
           <div class="skill mb-4">
             <h3 class="fs-6">Bootstrap</h3>
             <div class="progress" role="progressbar" aria-label="Example 1px high" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="height: 6px">
-              <div class="progress-bar bg-danger" style="width: 50%"></div>
+              <div class="progress-bar bg-danger" style="width: 70%"></div>
             </div>
           </div>
         </div>
@@ -231,7 +231,7 @@
             </div>
             <div class="col-lg-4 col-md-6 mb-3">
               <div class="items">
-                <img src="./images/project6.jpg" class="w-100 img-thumbnail shadow-sm" style="height: 240px;" alt="">
+                <img src="./images/Screenshot.png" class="w-100 img-thumbnail shadow-sm" style="height: 240px;" alt="">
                 <h3 class="fs-5 my-2">Admin Dashboard</h3>
                 <p class="">
                   <a href="#" class="text-decoration-none text-danger">Live Demo</a>
@@ -240,7 +240,7 @@
             </div>
             <div class="col-lg-4 col-md-6 mb-3">
               <div class="items">
-                <img src="./images/project7.jpg" class="w-100 img-thumbnail shadow-sm" style="height: 240px;" alt="">
+                <img src="./images/Screenshot (714).png" class="w-100 img-thumbnail shadow-sm" style="height: 240px;" alt="">
                 <h3 class="fs-5 my-2">Admin Dashboard</h3>
                 <p class="">
                   <a href="#" class="text-decoration-none text-danger">Live Demo</a>
@@ -249,7 +249,7 @@
             </div>
             <div class="col-lg-4 col-md-6 mb-3">
               <div class="items">
-                <img src="./images/project3.jpg" class="w-100 img-thumbnail shadow-sm" style="height: 240px;" alt="">
+                <img src="./images/Screenshot (866).png" class="w-100 img-thumbnail shadow-sm" style="height: 240px;" alt="">
                 <h3 class="fs-5 my-2">Admin Dashboard</h3>
                 <p class="">
                   <a href="#" class="text-decoration-none text-danger">Live Demo</a>
@@ -258,7 +258,7 @@
             </div>
             <div class="col-lg-4 col-md-6 mb-3">
               <div class="items">
-                <img src="./images/project4.png" class="w-100 img-thumbnail shadow-sm" style="height: 240px;" alt="">
+                <img src="./images/Screenshot (858).png" class="w-100 img-thumbnail shadow-sm" style="height: 240px;" alt="">
                 <h3 class="fs-5 my-2">Admin Dashboard</h3>
                 <p class="">
                   <a href="#" class="text-decoration-none text-danger">Live Demo</a>
@@ -402,7 +402,7 @@
                     </div>
                     <div class="text ms-3">
                       <div class="fs-5">Phone</div>
-                      <div class="text-muted">09796789321</div>
+                      <div class="text-muted">09424605805</div>
                     </div>
                   </div>
                   <div class="contact-item d-flex mb-3">
