--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <h3 class="fs-3 mb-3 fw-bold">Freelancer</h3>
           </div>
           <p class="text-muted">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore debitis praesentium
+            “Freelance Digital Designer | Websites, Projects & Visual Graphics”.
           </p>
           <div class="row text-uppercase text-center my-3">
             <div class="col-sm-4">
@@ -176,7 +176,7 @@
                 </div>
                 <h3 class="fs-5 py-2">Web Development</h3>
                 <p class="text-muted">
-                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veritatis maxime pariatur corrupti nihil eius voluptate ducimus magnam facere debitis ipsam qui labore, atque mollitia, perferendis libero impedit repellat sit alias.
+                  Focuses on using tools like Bootstrap and JavaScript to create responsive, interactive experiences.
                 </p>
               </div>
             </div>
@@ -187,7 +187,7 @@
                 </div>
                 <h3 class="fs-5 py-2">Creative Idea</h3>
                 <p class="text-muted">
-                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veritatis maxime pariatur corrupti nihil eius voluptate ducimus magnam facere debitis ipsam qui labore, atque mollitia, perferendis libero impedit repellat sit alias.
+                  I enjoy transforming innovative ideas into functional websites and projects that blend creativity with practical solutions.
                 </p>
               </div>
             </div>
@@ -198,7 +198,7 @@
                 </div>
                 <h3 class="fs-5 py-2">Photoshop</h3>
                 <p class="text-muted">
-                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veritatis maxime pariatur corrupti nihil eius voluptate ducimus magnam facere debitis ipsam qui labore, atque mollitia, perferendis libero impedit repellat sit alias.
+                  Creative Visual Designer: Transforming ideas into compelling digital art with Photoshop
                 </p>
               </div>
             </div>
@@ -479,3 +479,4 @@
 <!-- javascript bundle with popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </html>
+
