--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
           <!-- contact-link start -->
             <div class="row">
               <div class="col-lg-12 d-flex align-items-center mb-5">
-                <a href="" class="btn btn-danger px-3 me-4">Download CV</a>
+                <a href="Maw Koon's CV.pdf" class="btn btn-danger px-3 me-4">Download CV</a>
                 <div class="social-link">
                   <a href="https://www.facebook.com/mawkoonhein8112002"target=_blank class="me-2"><i class="fa-brands fa-facebook-f text-dark fa-lg"></i></a>
                   <a href="" class="me-2"><i class="fa-brands fa-instagram text-dark fa-lg"></i></a>
@@ -479,4 +479,5 @@
 <!-- javascript bundle with popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </html>
+
 
