--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
             </div>
             <div class="col-lg-4 col-md-6 mb-3">
               <div class="items">
-                <img src="./images/project5.jpg" class="w-100 img-thumbnail shadow-sm" style="height: 240px;" alt="">
+                <img src="./images/Screenshot (472).png" class="w-100 img-thumbnail shadow-sm" style="height: 240px;" alt="">
                 <h3 class="fs-5 my-2">Admin Dashboard</h3>
                 <p class="">
                   <a href="#" class="text-decoration-none text-danger">Live Demo</a>
@@ -479,5 +479,6 @@
 <!-- javascript bundle with popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </html>
+
 
 
